--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
+    "react-modal": "^3.14.3",
     "react-modal-video": "^1.2.6",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
