--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.1",
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.2",
     "next": "^10.0.6",
+    "next-connect": "^0.10.2",
     "next-images": "^1.8.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
